--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -34,7 +34,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        
+        android:name="com.orm.SugarApp" >  <!--Use this attribute verbatim-->
+        <meta-data android:name="DATABASE" android:value="przewodnik.db" />
+        <meta-data android:name="VERSION" android:value="1" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="blake.przewodnikturystyczny.baza.model" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
