--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -33,7 +33,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="a@string/app_name"
         android:theme="@style/AppTheme" 
         
         android:name="com.orm.SugarApp" >  <!--Use this attribute verbatim-->
