Działają relacje wiele-wiele  - zmodyfikowana biblioteka ActiveAndroid Klasa ObslugaBazy - zalatwia jednym ruchem Select wszystkiego i Truncate wszystkieg Nowy interfejs IfSelectable - wszystkie modelowe go implementuja Zmiana wygladu przycisków
CLOSED - task 29: Stworzyć klasę ObsługaBazy. 
http://github.com/blazej3k/dupcia/issues/issue/29

--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -50,7 +50,8 @@
             blake.przewodnikturystyczny.baza.model.TabRod,
             blake.przewodnikturystyczny.baza.model.TabRzecz,
             blake.przewodnikturystyczny.baza.model.TabWydarzenie,
-            blake.przewodnikturystyczny.baza.model.TabMiejsceWydarzenie" />
+            blake.przewodnikturystyczny.baza.model.pomocniczy.TabMiejsceWydarzenie,
+            blake.przewodnikturystyczny.baza.model.pomocniczy.TabMiejsceRzecz" />
 
         <!-- Powyżej tagi ActiveAndroida -->
         <activity
