--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -54,9 +54,12 @@
             blake.przewodnikturystyczny.baza.model.pomocniczy.TabMiejsceRzecz" />
 
         <!-- Powyżej tagi ActiveAndroida -->
+        
+        android:parentActivityName="pl.javastart.actionbartest.upbutton.EntryListActivity"
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,7 +68,8 @@
         </activity>
         <activity
             android:name="blake.przewodnikturystyczny.activity.Mapa"
-            android:label="@string/title_activity_mapa" >
+            android:label="@string/title_activity_mapa" 
+            android:screenOrientation="portrait" >
         </activity>
 
         <meta-data
