--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -20,7 +20,7 @@
      The following two permissions are not required to use
      Google Maps Android API v2, but are recommended. 
      
-     Do pobierania lokalizacji
+     Do pobierania lokalizacji
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -31,14 +31,17 @@
         android:required="true" />
 
     <application
+        android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        
-        android:name="com.activeandroid.app.Application" >  
-        <meta-data android:name="AA_DB_NAME" android:value="przewodnik.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="przewodnik.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
         <meta-data
             android:name="AA_MODELS"
             android:value="
@@ -54,11 +57,11 @@
             blake.przewodnikturystyczny.baza.model.pomocniczy.TabMiejsceRzecz" />
 
         <!-- Powyżej tagi ActiveAndroida -->
-        
-        android:parentActivityName="pl.javastart.actionbartest.upbutton.EntryListActivity"
+
+        android:parentActivityName="pl.javastart.actionbartest.upbutton.EntryListActivity"
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,8 +70,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="blake.przewodnikturystyczny.activity.Mapa"
-            android:label="@string/title_activity_mapa" 
+            android:name=".activity.Mapa"
+            android:label="@string/title_activity_mapa"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.ListaExp"
+            android:label="@string/demo_str"
             android:screenOrientation="portrait" >
         </activity>
 
@@ -78,6 +86,11 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCqj8oJ9k8iB9oVlZ18J9Qc148TXY7WUpI" />
+
+        <activity
+            android:name=".ListaExp"
+            android:label="@string/title_activity_lista_exp" >
+        </activity>
     </application>
 
 </manifest>
