--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:required="true" />
 
     <application
-        android:name="com.activeandroid.app.Application"
+        android:name="blake.przewodnikturystyczny.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -58,7 +58,6 @@
 
         <!-- Powyżej tagi ActiveAndroida -->
 
-        android:parentActivityName="pl.javastart.actionbartest.upbutton.EntryListActivity"
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -72,11 +71,6 @@
         <activity
             android:name=".activity.Mapa"
             android:label="@string/title_activity_mapa"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name=".activity.ListaExp"
-            android:label="@string/demo_str"
             android:screenOrientation="portrait" >
         </activity>
 
