--- a/PrzewodnikTurystyczny/AndroidManifest.xml
+++ b/PrzewodnikTurystyczny/AndroidManifest.xml
@@ -20,7 +20,7 @@
      The following two permissions are not required to use
      Google Maps Android API v2, but are recommended. 
      
-     Do pobierania lokalizacji
+     Do pobierania lokalizacji
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -31,7 +31,7 @@
         android:required="true" />
 
     <application
-        android:name="blake.przewodnikturystyczny.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -84,6 +84,10 @@
         <activity
             android:name=".ListaExp"
             android:label="@string/title_activity_lista_exp" >
+        </activity>
+        <activity
+            android:name="blake.przewodnikturystyczny.activity.Wyszukiwanie"
+            android:label="@string/title_activity_wyszukiwanie" >
         </activity>
     </application>
 
